--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,10 @@
     </modules>
 
     <properties>
-
-        <grpc.version>1.11.0</grpc.version>
+        <grpc.version>1.12.0</grpc.version>
         <protoc.version>3.5.1</protoc.version>
-        <protobuf.plugin.version>0.5.0</protobuf.plugin.version>
+        <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
         <os.plugin.version>1.5.0.Final</os.plugin.version>
-
     </properties>
 
     <dependencies>
@@ -39,8 +37,13 @@
             <artifactId>grpc-stub</artifactId>
             <version>${grpc.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
-
 
     <build>
 
@@ -79,8 +82,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>18</source>
+                    <target>18</target>
                 </configuration>
             </plugin>
         </plugins>
