--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
                 <configuration>
                     <source>18</source>
                     <target>18</target>
@@ -88,6 +89,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
